; ModuleID = '/home/carl/AnghaBench/kphp-kdb/binlog/extr_kdb-binlog-common.c_flush_binlog_ts.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/binlog/extr_kdb-binlog-common.c_flush_binlog_ts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@binlogname = common dso_local global i32 0, align 4
@binlog_disabled = common dso_local global i64 0, align 8
@log_last_ts = common dso_local global i64 0, align 8
@disable_crc32 = common dso_local global i32 0, align 4
@disable_ts = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @flush_binlog_ts() #0 {
  %1 = load i32, i32* @binlogname, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* @binlog_disabled, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %3, %0
  br label %26

7:                                                ; preds = %3
  %8 = load i64, i64* @log_last_ts, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %7
  %11 = load i32, i32* @disable_crc32, align 4
  %12 = and i32 %11, 1
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %10
  %15 = call i32 (...) @alloc_log_crc32_event()
  br label %23

16:                                               ; preds = %10
  %17 = load i32, i32* @disable_ts, align 4
  %18 = and i32 %17, 1
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %16
  %21 = call i32 (...) @alloc_log_timestamp_event()
  br label %22

22:                                               ; preds = %20, %16
  br label %23

23:                                               ; preds = %22, %14
  br label %24

24:                                               ; preds = %23, %7
  %25 = call i32 @flush_binlog_forced(i32 1)
  br label %26

26:                                               ; preds = %24, %6
  ret void
}

declare dso_local i32 @alloc_log_crc32_event(...) #1

declare dso_local i32 @alloc_log_timestamp_event(...) #1

declare dso_local i32 @flush_binlog_forced(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
